<resources>
    <string name="app_name">Think Reminder</string>
    <string name="home">Home</string>
    <string name="setting">Settings</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae porta lorem, eu imperdiet purus. Sed at posuere orci, et rhoncus massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam ultrices ut metus id aliquam. Suspendisse vitae sem lacinia, varius ex eu, aliquam ante. Mauris tristique vulputate erat, elementum elementum metus. Donec sollicitudin luctus metus ac elementum. Curabitur tortor lectus, scelerisque ac tellus id, ullamcorper egestas nibh. Fusce sit amet diam pulvinar, blandit tortor consequat, finibus nibh.</string>
    <string name="onboard_title1">Read quotes of philosophers</string>
    <string name="onboard_title2">Look at the clips of movies with subtitles</string>
    <string name="onboard_title3">Filter by country,date</string>
    <string name="onboard_desc1">With an amazing design, read and think about the quotes of philosophers.</string>
    <string name="onboard_desc2">Check and read the details of a movie from a movie clip.</string>
    <string name="onboard_desc3">Filter the movies and philosophers by date or country</string>
    <string name="get_started">Get Started</string>
    <string name="loading">Loading..</string>
    <string name="preference_file_key">base_app_file_key</string>
    <string name="onboarding_title">Enjoy the\nquotes</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="name">Name</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="empty_field_error_message">Provide your %s</string>
    <string name="ok">OK</string>
    <string name="password_not_equal">Passwords not equal</string>
    <string name="check_empty_fields">Please check empty fields</string>
    <string name="password_length">Password length must be greater than 6</string>
    <string name="valid_email_address_error">Please provide valid email address</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="reset_password_info">We’ll send you a reset password link to your email address to reset your password.</string>
    <string name="login_description">READ\nTHINK\nTELL</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="open">Open</string>
    <string name="reset_password_email_sent_message">Reset password link sent to your email address.</string>
    <string name="top_quotes">Top quotes</string>
    <string name="day_of_quotes">Day of quotes</string>
    <string name="see_more">see more</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>