<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:background="@drawable/auth_bg"
        tools:context=".ui.auth.register.RegisterFragment">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/TextStyle.Bold.32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_back"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="@string/login_description"
            android:textColor="@color/white" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/AuthTextInputLayoutStyle"
            android:layout_below="@id/tv_description"
            android:layout_marginTop="16dp"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/email_outline"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                style="@style/AuthTextInputEditTextStyle"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/AuthTextInputLayoutStyle"
            android:layout_below="@id/til_email"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white"
            app:startIconDrawable="@drawable/lock_outline"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                style="@style/AuthTextInputEditTextStyle"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/layout_social_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_password"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iv_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:src="@drawable/ic_google" />



        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/AuthButtonStyle"
            android:layout_below="@id/layout_social_login"
            android:layout_marginTop="25dp"
            android:text="@string/login" />

        <TextView
            android:id="@+id/tv_forgot_password"
            style="@style/TextStyle.SemiBold.14dp"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:layout_centerHorizontal="true"
            android:text="@string/forgot_your_password"
            android:textColor="@color/white" />


    </RelativeLayout>
</layout>