<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:background="@drawable/auth_bg">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/white" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/AuthTextInputLayoutStyle"
            android:layout_marginTop="16dp"
            android:layout_centerInParent="true"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/email_outline"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                style="@style/AuthTextInputEditTextStyle"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            style="@style/AuthButtonStyle"
            android:clickable="false"
            android:layout_below="@id/til_email"
            android:layout_marginTop="15dp"
            android:text="@string/reset_password" />
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/reset_password_info"
            style="@style/TextStyle.Bold.14dp"
            android:textColor="@color/white"
            android:layout_above="@id/til_email"
            android:layout_marginBottom="25dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</layout>